<resources>
    <!-- General Settings -->
    <string name="app_name">location information</string>
    <string name="app_version">Version 0.1</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">About</string>

    <!-- MainActivity Resources -->
    <string name="activity_main_button_show_map">Show Map...</string>
    <string name="activity_main_button_settings">Settings...</string>
    <string name="activity_main_button_about">About...</string>

    <!-- SettingsActivity Resources -->
    <string name="activity_settings_tV_seekBar1_1">Nuclear power plant</string>
    <string name="activity_settings_tV_seekBar1_2">0km</string>
    <string name="activity_settings_tV_seekBar1_3"></string>
    <string name="activity_settings_tV_seekBar1_4">100km</string>
    <string name="activity_settings_tV_seekBar2_1">Motorway</string>
    <string name="activity_settings_tV_seekBar2_2">0km</string>
    <string name="activity_settings_tV_seekBar2_3"></string>
    <string name="activity_settings_tV_seekBar2_4">30km</string>
    <string-array name="spinner1_arrays">
        <item>near</item>
        <item>far</item>
    </string-array>
    <string-array name="spinner2_arrays">
        <item>near</item>
        <item>far</item>
    </string-array>
    <string-array name="spinner3_arrays">
        <item>access motorway</item>
        <item>exit motorway</item>
    </string-array>

    <!-- AboutActivity Settings -->
    <string name="activity_about_info_text">
        This app is in an early development stage. Therefore, bugs and display
        glitches are unavoidable. This app has also not gone through in-depth
        quality and stability testing. If you find bugs and errors, please report
        them to us by sending us an email at info@hqevaluator.com. Thank you.
    </string>
    <string name="activity_about_license_text">
        We have yet not determined under which license to publish this app.
    </string>
    <string name="activity_about_authors_text">
        Authors are:\nA. Gasser, T. Horvath, T. Schäuble
    </string>
</resources>
