<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="mse.hqevaluator.AboutActivity">

        <TextView
            android:id="@+id/appName"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appVersion"
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/appName"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/aboutText"
            android:text="@string/activity_about_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/appVersion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:textSize="14dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/licenseText"
            android:text="@string/activity_about_license_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/aboutText"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/authorsText"
            android:text="@string/activity_about_authors_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/licenseText"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />

    </RelativeLayout>

</ScrollView>